src/oblig2patch/src/tests/oblig2/errors/type7_fail.cmp
program type7_fail
begin
    struct Foo  {  Attr : int };
    proc main()
    begin
        var foo : Foo
    in 
        (foo).DoesntExist := 42 /* error, no such attribute */
    end

end